--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,154 @@
-@charset "UTF-8";
+@charset "Utf-8";
+
+* {
+    margin: 0px;
+    padding: 0px;
+}
+
+body {
+    margin: 0;
+    padding: 0;
+    font-family: Arial, sans-serif;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
 
 header {
+    background-color: rgb(28, 28, 28);
     height: 150px;
-    color: (28,28,28);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 20px;
+}
+
+.logo img {
+    height: 80px; 
+    width: auto;
+    margin-right: 20px;
+}
+
+header > nav > ul {
+    display: flex;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+header > nav > ul > li {
+    margin-left: 20px;
+}
+
+header > nav > ul > li:first-child {
+    margin-left: 0;
+}
+
+header > nav > ul > li > a {
+    color: #fff;
+    text-decoration: none;
+}
+
+
+footer {
+    height: 300px;
+    background-image: linear-gradient(white, rgb(130, 245, 35));
+    text-align: center;
+    color: #333;
+    padding-top: 50px;
+}
+
+    footer p {
+        margin: 0;
+}
+
+    .footer-info {
+    text-align: center;
+}
+
+    .footer-info p {
+     margin: 5px 0;
+     font-size: 16px;
+}
+
+    .social-icons {
+    margin-top: 10px;
+}
+
+    .social-icons a {
+    display: inline-block;
+    margin-right: 10px;
+}
+
+  .social-icons img {
+   width: 30px;
+   height: 30px;
+}
+
+   *{box-sizing:border-box}
+
+   .about-section {
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    margin-top: 50px; 
+}
+
+    .about-text {
+    max-width: 50%;
+    margin-right: 20px;
+    font-family: "Lora", serif; 
+}
+
+    .about-text p {
+    margin-bottom: 10px;
+}
+
+    .about-image img {
+    width: 400px;
+    height: 250px;
+    margin-right: 10px;
+}
+
+    .bottom-section {
+    margin-top: 50px;
+}
+
+    .bottom-section iframe {
+    width: 100%;
+    height: 400px;
+}
+
+    h1, h2, h3, h4, h5, h6 {
+    font-family: "Roboto", "Lora"; 
+}
+
+main {
+    flex: 1;
+    background-color: #f2f2f2;
+    padding: 20px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+main h1 {
+    margin-top: 0;
+}
+
+.gallery {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.photo {
+    width: 30%;
+    margin: 10px;
+}
+
+.photo img {
+    width: 100%;
+    height: auto;
 }
